tests/multiflow_with_flowlib/multiflow_with_flowlib.exp
Error ---------------------------------------------------------- spread.js:14:42

Cannot call `funWithRestArray` because in the rest argument and then type
argument `T`, string is incompatible with number.

Error: spread.js:14
 14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
                                              ^^^^^ Cannot call `funWithRestArray` because in the rest argument and then type argument `T`, string [1] is incompatible with number [2].
  References:
   14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
                                                ^^^^^ [1]: string
    5: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                                                 ^^^^^^ [2]: number

Error ---------------------------------------------------------- spread.js:14:42

Cannot call `funWithRestArray` because in the rest argument, string is
incompatible with number literal `123`.

Error: spread.js:14
 14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
                                              ^^^^^ Cannot call `funWithRestArray` because in the rest argument, string [1] is incompatible with number literal `123` [2].
  References:
   14: funWithRestArray('hi', ...iterableOf123, 'bye', ...iterableOf123);
                                                ^^^^^ [1]: string
    5: function funWithRestArray(x: 'hi', y: 123, ...rest: Array<number>) {}
                                             ^^^ [2]: number literal `123`


Found 2 errors
